--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         -->
         <a-asset-item
           id="template"
-          src="template.gltf"
+          src="template.glb"
         >
         </a-asset-item>
       </a-assets>
